creating-languages-section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Skills from "@/components/sections/Skills.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Education from "@/components/sections/Education.astro";
 import Experience from "@/components/sections/Experience.astro";
+import Languages from "@/components/sections/Languages.astro";
 import KeyboardManager from "@/components/KeyboardManager.astro";
 ---
 
@@ -16,6 +17,7 @@ import KeyboardManager from "@/components/KeyboardManager.astro";
     <About />
     <Experience />
     <Education />
+    <Languages />
     <Projects />
     <Skills />
   </main>
