--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -11,6 +11,10 @@ import Git from "@/icons/git.astro";
 import GitHub from "@/icons/GitHub.astro";
 import Tailwind from "@/icons/tailwind.astro";
 import Next from "@/icons/next.astro";
+import MongoDB from "@/icons/mongo.astro";
+import Python from "@/icons/python.astro";
+import Java from "@/icons/java.astro";
+import AstroBuild from "@/icons/astr.astro";
 import { skills } from "@cv";
 
 const SKILLS_ICONS: Record<string, any> = {
@@ -25,6 +29,10 @@ const SKILLS_ICONS: Record<string, any> = {
   GitHub,
   Next,
   Tailwind,
+  MongoDB,
+  Python,
+  Java,
+  AstroBuild,
 };
 ---
 
