--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Languages from "@/components/sections/Languages.astro";
 import KeyboardManager from "@/components/KeyboardManager.astro";
 ---
 
-<Layout title="Minimalist Portfolio">
+<Layout title="Alex Delgado's Portfolio">
   <main>
     <Hero />
     <About />
